--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Title -->
-    <title>قافلة النور</title>
+    <title>قافلة طريق الجنة</title>
     <!-- Favicon Icon -->
     <link rel="shortcut icon" href="assets/images/omra/favicons/favicon-32x32.png" type="image/x-icon">
     <!-- Google Fonts -->
@@ -157,7 +157,7 @@
         <!-- Hero Area Start -->
         <section class="hero-area bgc-black pt-200 rpt-120 rel z-2">
             <div class="container-fluid">
-                <h3 class="hero-title" data-aos="flip-up" data-aos-delay="50" data-aos-duration="1500" data-aos-offset="50">قافلة النور ترحب بكم </h3>
+                <h3 class="hero-title" data-aos="flip-up" data-aos-delay="50" data-aos-duration="1500" data-aos-offset="50">قافلة طريق الجنة ترحب بكم </h3>
                 <div class="main-hero-image bgs-cover" style="background-image: url(assets/images/omra/bg1.jpg);"></div>
             </div>
         </section>
@@ -253,7 +253,7 @@
                                 <h2>من نحن ؟</h2>
                             </div>
                             <p>     
-                                قافلة النور هي شركة رائدة فى الرحلات والسفريات مهمتنا الأساسية هى مساعدة العملاء والمسافرين حرصاً منا على توفير كافة سبل الراحة أثناء ترحالهم وإستكشافهم للمعالم الرائعة فى المملكة العربية السعودية.
+                                قافلة طريق الجنة هي شركة رائدة فى الرحلات والسفريات مهمتنا الأساسية هى مساعدة العملاء والمسافرين حرصاً منا على توفير كافة سبل الراحة أثناء ترحالهم وإستكشافهم للمعالم الرائعة فى المملكة العربية السعودية.
                             </p>
                             <div class="divider counter-text-wrap mt-45 mb-55"><span> نحن لدينا اكثر من <span class="count-text plus" data-speed="3000" data-stop="10">0</span> سنوات من الخبرة</span></div>
                             <div class="row">
@@ -932,7 +932,7 @@
                     <div class="row">
                        <div class="col-lg-5">
                             <div class="copyright-text text-center text-lg-start">
-                                <p>@جميع الحقوق محفوظة لـ  <a href="#">قافلة النور</a>  2025</p>
+                                <p>@جميع الحقوق محفوظة لـ  <a href="#">قافلة طريق الجنة</a>  2025</p>
                             </div>
                        </div>
                       
