Add SEO and Open Graph meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- SEO Meta Tags -->
+<meta name="description" content="قافلة طريق الجنة - حجز رحلات عمرة وزيارات إلى مكة والمدينة المنورة. باصات حديثة وفنادق فاخرة مع خدمة عملاء ممتازة.">
+<meta name="keywords" content="عمرة, رحلات, مكة, المدينة, حجز, قافلة, طريق الجنة, باصات">
+<meta name="author" content="قافلة طريق الجنة">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- Open Graph Meta Tags (Social Media) -->
+<meta property="og:title" content="قافلة طريق الجنة">
+<meta property="og:description" content="حجز رحلات عمرة وزيارات إلى مكة والمدينة المنورة">
+<meta property="og:url" content="https://tarekaljannah.qafiltalnour.com/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://tarekaljannah.qafiltalnour.com/assets/images/omra/logo1.png">
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="قافلة طريق الجنة">
+<meta name="twitter:description" content="حجز رحلات عمرة وزيارات إلى مكة والمدينة المنورة">
+<meta name="twitter:image" content="https://tarekaljannah.qafiltalnour.com/assets/images/omra/logo1.png">
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://tarekaljannah.qafiltalnour.com/">
+
+<!-- Language Declaration -->
+<meta http-equiv="content-language" content="ar">
     <!-- Title -->
     <title>قافلة طريق الجنة</title>
     <!-- Favicon Icon -->
